[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/uglybyte.woff" type="DynamicFontData" id=1]
[ext_resource path="res://pseudo-lobby.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/gadugi.ttf"

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[node name="Pseudo-lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -360, -39 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0156863, 0.247059, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -327.5
margin_top = -180.0
margin_right = 327.5
margin_bottom = -82.0
custom_fonts/font = SubResource( 4 )
text = "192.168.43.20:8765"
placeholder_text = "Enter IP Address here..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.5
margin_top = -40.0
margin_right = 77.5
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectingLabel" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -104.0
margin_right = 197.0
margin_bottom = -33.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "CONNECTING..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -319.0
margin_top = -395.0
margin_right = 336.0
margin_bottom = -230.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
